@@ -265,8 +265,8 @@ ext/escaper/exception.lo
 ext/kernel/string.lo
 ext/mvc/model/metadata/files.lo
 unit-tests/cache/unit-tests.views.test10.index.volt.compiled
-unit-tests/cache/Robots.php
-unit-tests/cache/robots.php
+unit-tests/cache/meta-robots.php
+unit-tests/cache/map-robots.php
 unit-tests/views/test10/children.extends.volt.php
 ext/acl/adapterinterface.lo
 ext/acl/resourceinterface.lo
