@@ -51,7 +51,7 @@
  *
  *<code>
  *
- * $phql  = "SELECT c.price*0.16 AS taxes, c.* FROM Cars AS c JOIN Brands AS b WHERE b.name = :name: ORDER BY c.name";
+ * $phql = "SELECT c.price*0.16 AS taxes, c.* FROM Cars AS c JOIN Brands AS b WHERE b.name = :name: ORDER BY c.name";
  *
  * $result = $manager->executeQuery($phql, array(
  *   'name' => 'Lamborghini'
