@@ -66,7 +66,7 @@
 
 			<!-- Other components -->
 			<file>unit-tests/ControllersTest.php</file>
-			<file>unit-tests/SessionTest.php</file>
+			<!--<file>unit-tests/SessionTest.php</file>-->
 			<file>unit-tests/UrlTest.php</file>
 			<file>unit-tests/FlashTest.php</file>
 			<file>unit-tests/TagTest.php</file>
